--- a/src/backend/templates/login.html
+++ b/src/backend/templates/login.html
@@ -1,16 +1,11 @@
-{% extends "layout.html" %}
-{% block title %}Sign In{% endblock %}
-{% block body %}
-  <h2>Log In</h2>
-  {% if error %}<div class="error"><strong>Error:</strong> {{ error }}</div>{% endif %}
-  <form action="/api/login" method="POST">
-    <dl>
-      <dt>Username:
-      <dd><input type="text" name="username" size="30" value="{{ request.form.username }}">
-      <dt>Password:
-      <dd><input type="password" name="password" size="30">
-    </dl>
-    <div class="actions"><input type="submit" value="Log In"></div>
-  </form>
-{% endblock %}
-
+{{ define "login_body" }}
+<h2>Log In</h2>
+{{ if .Error }}
+  <div class="error">{{ .Error }}</div>
+{{ end }}
+<form action="/api/login" method="POST">
+  <label>Username: <input type="text" name="username"></label><br>
+  <label>Password: <input type="password" name="password"></label><br>
+  <button type="submit">Log In</button>
+</form>
+{{ end }}
