--- a/templates/page-about.html
+++ b/templates/page-about.html
@@ -1,8 +1,12 @@
 {{define "about"}}
   {{template "header" .}}
-  <h1>Our mission</h1>
-  <p>We intend to build the world's best search engine!</p>
-  <h2>Our team</h2>
-  <img src="/static/monkgroup.png" alt="monk group our team" style="height: 50vh;">
+  <section class="hero card">
+    <h1>Our mission</h1>
+    <p>We intend to build the world's best search engine!</p>
+  </section>
+  <section class="card">
+    <h2>Our team</h2>
+    <img class="img-responsive" src="/static/monkgroup.png" alt="Our team">
+  </section>
   {{template "footer" .}}
 {{end}}
