--- a/templates/page-login.html
+++ b/templates/page-login.html
@@ -1,15 +1,21 @@
 {{define "login"}}
   {{template "header" .}}
-  <h2>Log In</h2>
-  {{if .error}}<div class="error"><strong>Error:</strong> {{.error}}</div>{{end}}
-  <form action="/api/login" method="POST">
-    <dl>
-      <dt>Username:</dt>
-      <dd><input type="text" name="username" size="30" value="{{.username}}"></dd>
-      <dt>Password:</dt>
-      <dd><input type="password" name="password" size="30"></dd>
-    </dl>
-    <div class="actions"><input type="submit" value="Log In"></div>
-  </form>
+  <section class="card">
+    <h2>Log In</h2>
+    {{if .error}}<div class="alert alert-error"><strong>Error:</strong> {{.error}}</div>{{end}}
+    <form class="form" action="/api/login" method="POST" novalidate>
+      <label>
+        <span>Username</span>
+        <input class="input" type="text" name="username" value="{{.username}}" autocomplete="username">
+      </label>
+      <label>
+        <span>Password</span>
+        <input class="input" type="password" name="password" autocomplete="current-password">
+      </label>
+      <div class="form-actions">
+        <button class="btn btn-primary" type="submit">Log In</button>
+      </div>
+    </form>
+  </section>
   {{template "footer" .}}
 {{end}}
