Stabilize main: CI SESSION_KEY, /search routing, and Grafana/Prometheus alignment

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,7 +12,7 @@
     <nav class="nav container">
       <a class="brand" href="/">WhoKnows<span class="dot">?</span></a>
       <ul class="nav-links">
-        <li><a class="nav-link" href="/?q=">Search</a></li>
+        <li><a class="nav-link" href="/search">Search</a></li>
         <li><a class="nav-link" href="/about">About</a></li>
         <li class="sep"></li>
         {{if .LoggedIn}}
@@ -40,7 +40,7 @@
       </div>
       <ul class="footer-links">
         <li><a href="/about">About</a></li>
-        <li><a href="/?q=">Search</a></li>
+        <li><a href="/search">Search</a></li>
         {{if .LoggedIn}}
           <li>
             <form action="/api/logout" method="POST" style="display:inline;">
@@ -65,8 +65,14 @@
     });
     function makeSearchRequest() {
       const query = (searchInput && searchInput.value) || '';
-      const url = new URL(window.location.href);
-      url.searchParams.set('q', query);
+      const url = new URL('/search', window.location.origin);
+      if (query) {
+        url.searchParams.set('q', query);
+      }
+      const language = new URL(window.location.href).searchParams.get('language');
+      if (language) {
+        url.searchParams.set('language', language);
+      }
       window.location.href = url.toString();
     }
   </script>
