Change rel attribute from 'noreferrer' to 'noopener noreferrer'
Updated link attributes for security improvements.

--- a/templates/about.html
+++ b/templates/about.html
@@ -20,7 +20,7 @@
         <div class="ql-sub muted">Prometheus scrape output</div>
       </a>
 
-      <a class="quick-link" href="https://gitdengas.dk/grafana/" target="_blank" rel="noreferrer">
+      <a class="quick-link" href="https://gitdengas.dk/grafana/" target="_blank" rel="noopener noreferrer">
         <div class="ql-title">Grafana</div>
         <div class="ql-sub muted">Dashboards</div>
       </a>
